...
                android:textColor="?attr/colorOnSurfaceVariant" />

        </LinearLayout>

        <!-- ViewPager2 -->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- 底部按钮 -->
        <LinearLayout
...
